tests/suite/fail/generated/types/fail_sub_bool_i64.ny
fn main() {
    let _ = true - 1 //~ ERROR Type mismatch in arithmetic
}
